django_api_service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "django-api-service"
  namespace: "django-test"
spec:
  ports:
    - port: 5678
      targetPort: 5678
  selector:
    component: django-app
  type: ClusterIP
...
