django_lb_service.yaml
---
apiVersion: "v1"
kind: Service
metadata:
  name: django-app-service
  namespace: django-test
  labels:
    app: django-app
spec:
  clusterIP: 10.0.12.99
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32109
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: django-app
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 35.225.76.83
...
