django_main_service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "django-main-service"
  namespace: "django-test"
spec:
  ports:
    - port: 8765
      targetPort: 8765
  selector:
    component: django-app-main
  type: ClusterIP
...
