django_service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "django-app-service"
  namespace: "django-test"
  labels:
    app: "django-app"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8000
  selector:
    app: "django-app"
  type: "LoadBalancer"
  loadBalancerIP: ""
...
