django_ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "django-ingress"
  namespace: "django-test"
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
      - mydomain.name
      secretName: cert-key-tls
  rules:
    - host: mydomain.name
      http:
        paths:
          - path: /
            backend:
              serviceName: django-app-main
              servicePort: 8765
          - path: /api/?(.*)
            backend:
              serviceName: django-app-api
              servicePort: 5678
...
